--- a/public/ad.html
+++ b/public/ad.html
@@ -62,6 +62,7 @@
       background-color: #218838;
     }
   </style>
+  <script type='text/javascript' src='//pl27036031.profitableratecpm.com/7a/27/f3/7a27f372fbf40ee4c30d30674db2d508.js'></script>
 </head>
 <body>
 
@@ -75,7 +76,8 @@
     <p>AI also powers personalized experiences in entertainment, such as content recommendations on streaming platforms. Despite concerns around privacy, job displacement, and ethics, the benefits of AI are undeniable. Researchers and engineers continue to develop AI systems that are safer, smarter, and more aligned with human values.</p>
     <p>As we move forward, understanding and shaping AI's role in society will be critical. Collaboration between governments, tech companies, and communities is essential to ensure AI works for the benefit of all.</p>
   </div>
-
+<script async="async" data-cfasync="false" src="//pl27036033.profitableratecpm.com/214647a59f714d2b8bdc98cc3630b51c/invoke.js"></script>
+<div id="container-214647a59f714d2b8bdc98cc3630b51c"></div>
   <footer id="footer">
     <button class="btn-bottom" onclick="handleAd()">Click to Continue</button>
   </footer>
@@ -99,6 +101,6 @@
       }
     }
   </script>
-
+<script type='text/javascript' src='//pl27036041.profitableratecpm.com/5e/e0/38/5ee0381c537a2297418ebeaa0270f8dc.js'></script>
 </body>
 </html>
